# my-translated-lyrics

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CLAUDE.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  LICENSE.md  cspell.yaml  dylint.toml  generate-ai-instructions.sh  generate-subtitles.sh  install-local-lyrics.sh  package.json  play-with-lyrics.sh  pnpm-lock.yaml  styles.toml
.github/: copilot-instructions.md
.github/workflows/: ci.yml  cspell.yaml  dylint.yaml  test.yaml
cli/: ai_instructions.rs  build_subtitles.rs  generate_subtitles.rs  install_local_lyrics.rs  play_with_lyrics.rs
data/CloudsideDreams-YunBianMengHua/: lyrics.vi.srt  lyrics.zh.srt  video.toml
data/FarewellToJianghu-ChangGeYiQuJianghuYuan/: lyrics.vi.srt  lyrics.zh.srt  video.toml
data/LunarCycle-YueLunhui/: lyrics.vi.srt  lyrics.zh.srt  song.toml  video.toml
data/MoonOverTheYellowTower-HuangLouYue/: lyrics.zh.srt  song.toml  video.toml
data/NotWaitingForTheMoon-BuDaiYue/: lyrics.vi.srt  lyrics.zh.srt  video.toml
data/PeachGardenRomance-TaoYuanQingJi/: lyrics.vi.srt  song.toml  video.toml
data/TaleOfQingtan-QingtanJi/: lyrics.zh.vtt  song.toml  video.toml
data/ThatDayByMyGildedWindow-LaiRiQiChuang/: lyrics.vi.srt  lyrics.zh.srt  song.toml  video.toml
data/TomorrowNightAwaitsWhom-MingXiaoDaiShui/: lyrics.vi.srt  lyrics.zh.srt  video.toml
drafts/FarewellToJianghu-ChangGeYiQuJianghuYuan/: actual.txt  credits-and-titles.full.json  discontinuous.srt  make-continuous-srt.js  make-continuous-vi-srt.js  make-discontinuous-srt.js  song.toml  texts.txt  video.toml
drafts/MillenniumOfFrostAndSnow-ShuangXueQianNian/: luatube712.zh-TW.srt  luotube712.zh-CN.srt  song.toml  video.toml
drafts/TaleOfQingtan-QingtanJi/: lyrics.vi.mtl.srt  lyrics.vi.mtl.vtt  lyrics.zh.srt  make-subtitles.js  song.toml  video.toml
drafts/【洛天依X楽正綾 | 古風オリジナル曲】《長歌一去江湖遠》 [cyUbX7wj6RA]/: texts.txt  time-info.json
lib/column-sort/: Cargo.toml
lib/exit-codes/: Cargo.toml
lib/fuzzy-select/: Cargo.toml
lib/generate-subtitles/: Cargo.toml
lib/generate-subtitles/src/: _test_utils.rs  credits_parse.rs  driver.rs  escape.rs  lib.rs  parse.rs  render_srt.rs  render_vtt.rs  styles.rs
lib/generate-subtitles/src/credits_parse/: tests.rs
lib/generate-subtitles/src/escape/: tests.rs
lib/generate-subtitles/src/parse/: error.rs  tests.rs
lib/generate-subtitles/src/render_srt/: tests.rs
lib/generate-subtitles/src/render_vtt/: tests.rs  voice_selector_tests.rs
lib/generate-subtitles/src/styles/: tests.rs
lib/generate-subtitles/tests/: sync_subtitles_sources.rs
lib/lyrics-core/: Cargo.toml
lib/lyrics-core/src/: file_snapshot.rs  lib.rs  line_markers_descriptor.rs  timestamp.rs  video_descriptor.rs
lib/lyrics-core/src/line_markers_descriptor/: tests.rs
lib/lyrics-core/src/timestamp/: tests.rs
lib/lyrics-core/tests/: consistent_timestamps.rs  directory_structure.rs  source_credits.rs  source_line_markers.rs  video_descriptors.rs
lib/play-with-lyrics/: Cargo.toml
lib/play-with-lyrics-tui/: Cargo.toml
lib/play-with-lyrics-tui/src/: host.rs  lib.rs  render.rs  screen.rs  selectors.rs  terminal.rs  tests.rs
lib/play-with-lyrics-tui/src/render/: tests.rs
lib/play-with-lyrics-tui/src/selectors/: _test_utils.rs  list.rs  rendering.rs  test_buttons.rs  test_list_keyboard.rs  test_mouse.rs  test_rendering.rs  test_restore.rs  test_video_keyboard.rs  tests.rs  video.rs
lib/play-with-lyrics-tui/src/selectors/tests/: buttons.rs  list_keyboard.rs  mouse.rs  rendering.rs  restore.rs  video_keyboard.rs
lib/play-with-lyrics/src/: catalog.rs  lib.rs  library.rs  player.rs
lib/play-with-lyrics/src/catalog/: tests.rs
lib/play-with-lyrics/src/player/: tests.rs
lib/terminal-screen/: Cargo.toml
lib/test-utils/: Cargo.toml
lib/test-utils/src/: lib.rs
sources/CloudsideDreams-YunBianMengHua/: credits.yaml  lyrics.vi.txt  lyrics.zh.txt
sources/FarewellToJianghu-ChangGeYiQuJianghuYuan/: credits-and-titles.json  credits.yaml  line-markers.toml  lyrics.vi.mtl.txt  lyrics.vi.mtl.vtt  lyrics.vi.srt  lyrics.vi.vtt  lyrics.zh.txt  lyrics.zh.vtt  make-continuous-srt.js  make-continuous-vi-srt.js  make-subtitles.js  subtitle.toml  subtitle.yaml  words.toml
sources/LunarCycle-YueLunhui/: credits.yaml  lyrics.vi.txt  lyrics.zh.txt  video.toml
sources/MissedInGusu-CuoGuSu/: credits.yaml  lyrics.vi.txt  lyrics.zh.txt  video.toml
sources/MoonOverTheYellowTower-HuangLouYue/: credits.yaml  lyrics.vi.txt  lyrics.zh.txt  video.toml
sources/NotWaitingForTheMoon-BuDaiYue/: credits.yaml  lyrics.vi.txt  lyrics.zh.txt
sources/PeachGardenRomance-TaoYuanQingJi/: credits.yaml  lyrics.vi.txt  lyrics.zh.txt
sources/TaleOfQingtan-QingtanJi/: credits.yaml  line-markers.toml  lyrics.vi.vtt  lyrics.zh.vtt  make-subtitles.js  subtitle.toml  subtitle.yaml  words.toml
sources/ThatDayByMyGildedWindow-LaiRiQiChuang/: credits.yaml  lyrics.vi.txt  lyrics.zh.txt
sources/TomorrowNightAwaitsWhom-MingXiaoDaiShui/: credits.yaml  lyrics.vi.txt  lyrics.zh.txt
src/: args.rs  build_subtitles.rs  credits_descriptor.rs  file_descriptor.rs  file_snapshot.rs  generate_subtitles.rs  install_local_lyrics.rs  lib.rs  line_markers_descriptor.rs  main.rs  manifest.rs  play_with_lyrics.rs  subtitle_descriptor.rs  timestamp.rs  video_descriptor.rs  words_descriptor.rs
src/build_subtitles/: credits_parse.rs  driver.rs  parse.rs  render_srt.rs  render_vtt.rs  styles.rs
src/generate_subtitles/: credits_parse.rs  driver.rs  escape.rs  parse.rs  render_srt.rs  render_vtt.rs  styles.rs
src/line_markers_descriptor/: tests.rs
src/timestamp/: tests.rs
src/video_descriptor/: tests.rs
src/words_descriptor/: tests.rs
template/ai-instructions/: copilot.md  shared.md
tests/: _utils.rs  build_subtitles.rs  consistent_timestamps.rs  directory_structure.rs  dry_run.rs  file_timestamps.rs  generate_subtitles.rs  install_local_lyrics.rs  lifecycle.rs  source_credits.rs  source_line_markers.rs  source_subtitle.rs  source_words.rs  sync_ai_instructions.rs  sync_subtitles_sources.rs  video_descriptors.rs  visibility.rs
(+71 files in other folders)
