[package]
name = "translated-lyrics"
version = "0.0.0"
edition = "2024"

[[bin]]
name = "install-local-lyrics"
path = "cli/install_local_lyrics.rs"

[[bin]]
name = "lyrics-ai-instructions"
path = "cli/ai_instructions.rs"

[[bin]]
name = "generate-subtitles"
path = "cli/generate_subtitles.rs"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
derive_more = { version = "2.1.1", features = ["add_assign", "as_ref", "deref", "display", "error", "from", "into"] }
itertools = "0.14.0"
pipe-trait = "0.4.0"
reflink = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.24"
strum = { version = "0.28.0", features = ["derive"] }
text-block-macros = "0.2.0"
toml = "1.1.2"

[dev-dependencies]
command-extra = "1.0.0"
into-sorted = "0.0.3"
maplit = "1.0.2"
pretty_assertions = "1.4.1"
rand = "0.10.0"
walkdir = "2.5.0"
