[workspace]
resolver = "3"
members = ["lib/*", "bin/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
publish = false

[workspace.lints.rust]
# `dylint_lib` is set by the Dylint driver when it loads the
# `perfectionist` library; declare it so a plain `cargo check` does not
# warn about the `cfg(dylint_lib = "perfectionist")` gates in the crate
# roots.
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(dylint_lib, values("perfectionist"))'] }

[workspace.dependencies]
lyrics-core = { path = "lib/lyrics-core" }
generate-subtitles = { path = "lib/generate-subtitles" }
test-utils = { path = "lib/test-utils" }
clap = { version = "4.6.1", features = ["derive"] }
command-extra = "1.0.0"
crossterm = "0.29.0"
derive_more = { version = "2.1.1", features = ["add_assign", "as_ref", "deref", "display", "from", "into"] }
into-deduped = "0.0.0"
into-sorted = "0.0.3"
itertools = "0.14.0"
maplit = "1.0.2"
pipe-trait = "0.4.0"
pretty_assertions = "1.4.1"
rand = "0.10.0"
reflink = "0.1.3"
serde = { version = "1.0.228", features = ["derive"] }
serde-saphyr = "0.0.24"
strum = { version = "0.28.0", features = ["derive"] }
text-block-macros = "0.2.0"
toml = "1.1.2"
walkdir = "2.5.0"
