[package]
name = "lyrics-core"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
derive_more.workspace = true
itertools.workspace = true
pipe-trait.workspace = true
serde.workspace = true
strum.workspace = true

[dev-dependencies]
into-sorted.workspace = true
pretty_assertions.workspace = true
serde-saphyr.workspace = true
test-utils.workspace = true
toml.workspace = true

[lints]
workspace = true
