[package]
name = "play-with-lyrics-tui"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
crossterm.workspace = true
fuzzy-select.workspace = true
lyrics-core.workspace = true
play-with-lyrics.workspace = true
unicode-width.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true

[lints]
workspace = true
