[package]
name = "play-with-lyrics"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
lyrics-core.workspace = true
fuzzy-select.workspace = true
command-extra.workspace = true
derive_more.workspace = true
itertools.workspace = true
pipe-trait.workspace = true
strum.workspace = true
toml.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
test-utils.workspace = true

[lints]
workspace = true
