[package]
name = "test-utils"
version.workspace = true
edition.workspace = true
publish.workspace = true

[dependencies]
lyrics-core.workspace = true
command-extra.workspace = true
derive_more.workspace = true
itertools.workspace = true
maplit.workspace = true
pipe-trait.workspace = true
rand.workspace = true
toml.workspace = true

[lints]
workspace = true
